--- a/YOLOv5_Defect_Detection_Notebook.ipynb
+++ b/YOLOv5_Defect_Detection_Notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "YOLOv5 Defect Detection Notebook",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVAQzx/iTgs6sxayLyGbX+",
+      "authorship_tag": "ABX9TyNczwTLkCRQESwg+lVR8/Ml",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,7 +168,7 @@
         "clear_output()\n",
         "print('If this file is not 93709695, it was not imported properly.')\n",
         "print(\"File size detected: \"+repr(os.stat('YOLOv5Weight/YOLOv5_Detect_Defects.pt').st_size))\n",
-        "%cd weights\n",
+        "%cd YOLOv5Weight\n",
         "print('\\nUpload YOLOv5 Weights..\\n')\n",
         "uploaded = files.upload()\n",
         "%cd ..\n",
@@ -186,7 +186,7 @@
         "clear_output()\n",
         "print('Setup complete. Using torch %s %s' % (torch.__version__, torch.cuda.get_device_properties(0) if torch.cuda.is_available() else 'CPU'))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +258,7 @@
       "source": [
         "!python detect.py --source '/content/yolov5/YOLOv5DefectDetection/demo_images' --weights YOLOv5Weight/YOLOv5_Detect_Defects.pt --iou-thres 0.0 --img-size 1024 --max-det 1000 --conf-thres 0.25 --save-txt --save-conf"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +306,7 @@
         "\n",
         "Image(pngImage)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +445,7 @@
       "source": [
         "!python plot_results_mpl.py --label 'runs/detect/exp/labels/r2_0200.txt' --image 'YOLOv5DefectDetection/demo_images/r2_0200.tif' --xdim 1104 --ydim 800 --save 'YOLOv5DefectDetection/demo_images/r2_0200_labeled.png' --dpi 200"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +482,7 @@
         "\n",
         "Image(labeledImg)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
